[package]
name = "rust_webserver"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
socket2 = "0.6"
chrono = "0.4.43"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# The following are allowed exceptions
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"  # match is clearer than map_or_else
